# game-of-life

./: Cargo.toml  README.md  index.html
i18n/: es.json
include/: i18n.js  main.css  main.js  modal.css  patterns.json  toggle.css
pkg/: .gitignore  game_of_life.js  game_of_life_bg.wasm
src/: lib.rs
